--- a/hugo.toml
+++ b/hugo.toml
@@ -2,17 +2,16 @@ baseURL = 'https://blog.smott.net/'
 languageCode = 'en-gb'
 title = 'Personal Blog'
 theme = 'poison'
-paginate = 10
 
 pluralizelisttitles = false
 
 [params]
-    brand = "smott"                      # name of your site - appears in the sidebar
-    # remote_brand_image = 'https://github.com/USERNAME.png' # path to a remote file
+    brand = "smott"
+    remote_brand_image = 'https://github.com/SamuelM96.png'
     # brand_image = "/images/test.jpg"    # path to the image shown in the sidebar
-    description = "Reverse Engineering & Programming" # Used as default meta description if not specified in front matter
-    dark_mode = true                      # optional - defaults to false
-    # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
+    description = "Reverse Engineering & Programming"
+    dark_mode = true
+    # favicon = "favicon.png"
 
     front_page_content = ["posts"] # Equivalent to the default value, add page bundle names to include them on the front page.
 
@@ -28,11 +27,11 @@ pluralizelisttitles = false
     ]
 
     # Links to your socials.  Comment or delete any you don't need/use. 
+    github_url = "https://github.com/SamuelM96"
     # discord_url = "https://discord.com"
     # email_url = "mailto://user@domain"
     # facebook_url = "https://facebook.com"
     # flickr_url = "https://flickr.com"
-    github_url = "https://github.com/SamuelM96"
     # gitlab_url = "https://gitlab.com"
     # instagram_url = "https://instagram.com"
     # linkedin_url = "https://linkedin.com"
@@ -48,7 +47,6 @@ pluralizelisttitles = false
     # bluesky_url = "https://bsky.app"
 
     rss_icon = true
-    # Which section the RSS icon links to, defaults to all content. See https://gohugo.io/templates/rss/#section-rss
     rss_section = "posts"
 
     # Hex colors for your sidebar.
